--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -155,9 +155,7 @@ The choice of these four algorithms is driven by the aim of obtaining a holistic
 \section{Model training and evaluation}
 \label{section:val_mt_eval}
 
-\subsection{Model Training}
-
-\subsubsection{Training Models}
+\subsection{Training Models}
 
 The model training process involves the utilization of two distinct classifiers:
 
@@ -171,7 +169,7 @@ The model training process involves the utilization of two distinct classifiers:
 
 subsection{Performance Evaluation}
 
-\subsubsection{Results Evaluation}
+\subsection{Results Evaluation}
 
 The evaluation of general results encompasses an assessment of the overall model performance and the computation of fairness metrics.
 
