--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -293,13 +293,13 @@ About the results showed in \cref{tab:results_di} results it's possible to make 
         \hline
     \end{tabular}
     \caption{Models training results for demographic parity difference metric}
-    \label{fig:results_dpd}
+    \label{tab:results_dpd}
 \end{table}
 
 About the results reported in \cref{tab:results_dpd} it's possible to make some consideration:
 
 \begin{itemize}
-        \item Every algorithm achieve a reasonable degree of group fairness.
+        \item Every algorithm achieves a reasonable degree of group fairness.
 
         \item The GridSearch algorithm with the XGB model is the combination of algorithm and model that fails into the achieving of trade-off between fairness and accuracy.
 
