--- a/front.tex
+++ b/front.tex
@@ -21,7 +21,7 @@
 		\Huge
 		\vspace{4cm}
 		\textbf{
-			Fair-by-design algorithm for access to education
+			Fair-by-Design Workflow for Unbiased AI Development and Equitable Outcomes
 		}
 		
 		\large
