--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -430,7 +430,7 @@ There are some considerations about the results reported in \cref{tab:pp_di}:
 
     \item The huge variance for the Grid Search (GS) algorithm suggests that it's great sensitivity to the model used in the training step. Even if the models are similar. In this case XGB and RF have completely different behaviors.
 
-    \item The Fairness through Unawareness (FtU) is the algorithm that has the maximum value even if the variance is the greatest with respect to (EG) and (DA)
+    \item The Fairness through Unawareness (FtU) is the algorithm that has the maximum value even if the variance is the greater than (EG) and (DA)
 
 \end{itemize}
 
