doc: introduction fixed

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -3,7 +3,7 @@
 
 Artificial Intelligence (AI) has experienced an unprecedented surge in prominence and utility, emerging as a transformative force across diverse domains. From propelling autonomous vehicles to facilitating healthcare diagnosis and recommendation systems, AI applications have become deeply integrated into daily life. Nevertheless, this rapid proliferation has given rise to concerns regarding the pervasive presence of bias within AI systems.
 
-AI bias, in this context, denotes inadvertent or systematic preferences exhibited toward specific groups or characteristics within data, algorithms, or decision-making processes. This bias can lead to unjust and unequal outcomes, making the mitigation of bias not just a technological challenge but also a moral and societal imperative in this era of AI-driven decision-making. The ethical principle of fairness underlines the collective aspiration to ensure that AI systems yield equitable and just results for all individuals, regardless of their personal attributes.
+AI bias, in this context, denotes inadvertent or systematic preferences exhibited toward specific groups or characteristics within data, algorithms, or decision-making processes. This bias can lead to unjust and unequal outcomes, making the mitigation of bias not just a technological challenge but also a moral and societal imperative in this era of AI-driven decision-making. The ethical principle of fairness underlines the collective aspiration to ensure that AI systems yield equitable and fair results for all individuals, regardless of their personal attributes.
 
 The implications of bias and unfairness in AI extend beyond mere technological considerations, carrying profound societal consequences that impact vital areas such as employment, healthcare, and access to critical services. Biased AI systems perpetuate and amplify existing inequalities, inadvertently reinforcing detrimental stereotypes and compromising the foundational principles of justice and equality.
 
