--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -68,6 +68,8 @@ fill=green!30]
 
 \tikzstyle{arrow} = [thick,->,>=stealth]
 
+\crefname{chapter}{Chapter}{Chapters}
+
 \mainlinespacing{1.241} % line spacing in mainmatter, comment to default
 
 \begin{document}
